--- a/RestWithASPNET/RestWithASPNET/appsettings.json
+++ b/RestWithASPNET/RestWithASPNET/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-V723FIU\\SQLEXPRESS;Initial Catalog=PersonBD;Integrated Security=SSPI;TrustServerCertificate=True"
+  },
   "AllowedHosts": "*"
 }
