--- a/RestWithASPNET/RestWithASPNET/appsettings.json
+++ b/RestWithASPNET/RestWithASPNET/appsettings.json
@@ -8,5 +8,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=DESKTOP-V723FIU\\SQLEXPRESS;Initial Catalog=PersonBD;Integrated Security=SSPI;TrustServerCertificate=True"
   },
+  "TokenConfiguration": {
+    "Audience": "ExempleAudience",
+    "Issuer": "ExempleIssuer",
+    "Secret": "MY_NEWEST_SUPER_SUPER_SECRET_KEY",
+    "Minutes": 60,
+    "DaysToExpiry": 7 
+  },
   "AllowedHosts": "*"
 }
