Query Params e Paged Search

--- a/RestWithASPNET/RestWithASPNET/appsettings.json
+++ b/RestWithASPNET/RestWithASPNET/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-V723FIU\\SQLEXPRESS;Initial Catalog=PersonBD;Integrated Security=SSPI;TrustServerCertificate=True"
+    "DefaultConnection": "Data Source=DESKTOP-1RLD24Q;Initial Catalog=PersonBD;Integrated Security=SSPI;TrustServerCertificate=True"
   },
   "TokenConfiguration": {
     "Audience": "ExempleAudience",
