--- a/RestWithASPNET/RestWithASPNET/appsettings.json
+++ b/RestWithASPNET/RestWithASPNET/appsettings.json
@@ -6,8 +6,10 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-1RLD24Q;Initial Catalog=PersonBD;Integrated Security=SSPI;TrustServerCertificate=True"
+    "DefaultConnection": "Data Source=db;Initial Catalog=rest_with_asp_net;User ID=matheusteste;Password=12345;TrustServerCertificate=True;"
   },
+  //Data Source=xxxx;Initial Catalog=rest_with_asp_net;User ID=seu_usuario;Password=sua_senha;TrustServerCertificate=True;
+
   "TokenConfiguration": {
     "Audience": "ExempleAudience",
     "Issuer": "ExempleIssuer",
